added styles for the numbers

--- a/style.css
+++ b/style.css
@@ -30,3 +30,16 @@ div{
     border:2pc solid #9c998d;
     box-sizing:border-box;
 }
+
+.one{
+    color:#e75346;
+}
+.two{
+    color:#4199d3;
+}
+.three{
+    color: #57da59;
+}
+.four{
+    color: #bb41d3;
+}
